--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@radix-ui/react-slot": "^1.1.0",
         "@supabase/ssr": "latest",
         "@supabase/supabase-js": "latest",
+        "@uploadthing/react": "^7.1.5",
         "autoprefixer": "10.4.20",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -24,6 +25,7 @@
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-intersection-observer": "^9.15.1",
+        "uploadthing": "^7.4.4",
         "use-debounce": "^10.0.4"
     },
     "devDependencies": {
