--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.468.0",
         "next": "latest",
-        "next-themes": "^0.4.3",
+        "next-themes": "^0.4.4",
         "prettier": "^3.3.3",
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-intersection-observer": "^9.15.1",
+        "sonner": "^1.7.4",
         "uploadthing": "^7.4.4",
         "use-debounce": "^10.0.4"
     },
