--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-select": "^2.1.5",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tabs": "^1.1.2",
         "@supabase/ssr": "latest",
         "@supabase/supabase-js": "latest",
         "@uploadthing/react": "^7.1.5",
