--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@supabase/ssr": "latest",
         "@supabase/supabase-js": "latest",
         "@uploadthing/react": "^7.1.5",
+        "add-to-calendar-button-react": "^2.8.1",
         "autoprefixer": "10.4.20",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
