--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
         "next": "latest",
         "next-themes": "^0.4.4",
         "prettier": "^3.3.3",
-        "react": "19.0.0",
+        "react": "^18.2.0",
         "react-day-picker": "^8.10.1",
-        "react-dom": "19.0.0",
+        "react-dom": "^18.2.0",
         "react-hook-form": "^7.54.2",
         "react-intersection-observer": "^9.15.1",
         "sonner": "^1.7.4",
