--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@radix-ui/react-dropdown-menu": "^2.1.5",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-popover": "^1.1.5",
+        "@radix-ui/react-progress": "^1.1.2",
         "@radix-ui/react-select": "^2.1.5",
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-switch": "^1.1.2",
         "@radix-ui/react-tabs": "^1.1.2",
         "@supabase/ssr": "latest",
         "@supabase/supabase-js": "latest",
+        "@tanstack/react-table": "^8.21.2",
         "@uploadthing/react": "^7.1.5",
         "add-to-calendar-button-react": "^2.8.1",
         "autoprefixer": "10.4.20",
@@ -28,7 +30,8 @@
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
         "lucide-react": "^0.468.0",
-        "next": "latest",
+        "n": "^10.1.0",
+        "next": "^15.2.4",
         "next-themes": "^0.4.4",
         "prettier": "^3.3.3",
         "react": "^18.2.0",
@@ -36,6 +39,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.54.2",
         "react-intersection-observer": "^9.15.1",
+        "recharts": "^2.15.1",
         "sonner": "^1.7.4",
         "uploadthing": "^7.4.4",
         "use-debounce": "^10.0.4",
